--- a/clinic-frontend/src/styles/styles.scss
+++ b/clinic-frontend/src/styles/styles.scss
@@ -10,19 +10,19 @@ $gray-400: #ced4da !default;
 $gray-500: #adb5bd !default;
 $gray-600: #868e96 !default;
 $gray-700: #495057 !default;
-$gray-800: #343a40 !default;
+$gray-800: #37474f !default;
 $gray-900: #212529 !default;
 $black:    rgb(24, 22, 22) !default;
 
-$blue:    #5D9CEC !default;
+$blue:    #303f9f !default;
 $indigo:  #967ADC !default;
 $purple:  #AC92EC !default;
 $pink:    #EC87C0 !default;
 $red:     #ED5565 !default;
 $orange:  #E9573F !default;
 $yellow:  #FFCE54 !default;
-$green:   #51aa69 !default;
-$teal:    #20c997  !default;
+$green:   #00695c !default;
+$teal:    #4db6ac  !default;
 $cyan:    #4A89DC !default;
 $grey:    #484542 !default;
 
@@ -53,7 +53,6 @@ $min-contrast-ratio:   2.75 !default;
 // Body
 
 $body-color:        $gray-800 !default;
-$body-color:        $gray-700 !default;
 
 // Fonts
 
@@ -95,20 +94,16 @@ $input-btn-padding-y:         .6rem;
 $input-btn-padding-x:         .6rem;
 $input-disabled-bg:                     $gray-100;
 $form-label-margin-bottom:              .6rem;
-$form-label-font-size:                  1.1rem;
-$form-check-input-width:                  1.5em;
-//$form-check-input-checked-bg-image:       url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'><path fill='none' stroke='#{$form-check-input-checked-color}' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10l3 3l6-6'/></svg>");
+$form-label-font-size:                  1rem;
+$form-check-input-width:                  1.3em;
+$input-btn-border-width :      2px;
+$form-check-input-checked-color:    $gray-900;
+$form-check-input-checked-bg-color:       $gray-500;
+$input-focus-border-color :               $gray-400;
+$input-btn-focus-box-shadow:      $gray-400;
 
 
-.sidebar {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 100;
-    padding: 48px 0 0;
-    box-shadow: inset -3px 0 0 rgba(12, 22, 13, 0.1);
-}
 
-
-@import '../node_modules/bootstrap/scss/bootstrap.scss';
+@import '../../node_modules/bootstrap/scss/bootstrap.scss';
+@import './style';
+@import './response';
