--- a/clinic-frontend/src/app/modules/account/pages/login/login.component.html
+++ b/clinic-frontend/src/app/modules/account/pages/login/login.component.html
@@ -1,6 +1,6 @@
-<section class="h-100">
-    <div class="container h-100">
-        <div class="row justify-content-sm-center h-100">
+<section class="d-flex align-items-center justify-content-center vh-100">
+    <div class="app-content container" @bubbleGrowAnimation>
+        <div class="row justify-content-sm-center">
             <div class="col-xxl-4 col-xl-5 col-lg-5 col-md-7 col-sm-9">
                 <div class="text-center my-5">
                     <!-- img src="https://getbootstrap.com/docs/5.0/assets/brand/bootstrap-logo.svg" alt="logo" width="100"-->
