--- a/clinic-frontend/src/app/modules/shared/layout/sidebar/sidebar.component.html
+++ b/clinic-frontend/src/app/modules/shared/layout/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="bg-white" id="sidebar-wrapper" [ngClass]="{ 'toggled': !(showSideNav | async) }">
+<div class="bg-white h-100" id="sidebar-wrapper" [ngClass]="{ 'toggled': !(showSideNav | async) }">
     <div class="sidebar-heading text-center py-3 text-white bg-primary fs-4 fw-bold text-uppercase border-bottom shadow-lg mb-2"><i
             class="fas fa-user-secret me-2"></i>Codersbite</div>
     <div class="list-group list-group-flush my-3">
