--- a/clinic-frontend/src/app/modules/account/pages/register/register.component.html
+++ b/clinic-frontend/src/app/modules/account/pages/register/register.component.html
@@ -1,59 +1,122 @@
-<section class="h-100">
-    <div class="container h-100">
-        <div class="row justify-content-sm-center h-100">
-            <div class="col-xxl-4 col-xl-5 col-lg-5 col-md-7 col-sm-9">
-                <div class="text-center my-5">
-                    <img src="https://getbootstrap.com/docs/5.0/assets/brand/bootstrap-logo.svg" alt="logo" width="100">
-                </div>
-                <div class="card shadow-lg">
-                    <div class="card-body p-5">
-                        <h1 class="fs-4 card-title fw-bold mb-4">Register</h1>
-                        <form method="POST" class="needs-validation" novalidate="" autocomplete="off">
-                            <div class="mb-3">
-                                <label class="mb-2 text-muted" for="name">Name</label>
-                                <input id="name" type="text" class="form-control" name="name" value="" required autofocus>
-                                <div class="invalid-feedback">
-                                    Name is required	
-                                </div>
-                            </div>
+<div class="row g-0 app-auth-wrapper">
+    <div class="col-12 col-md-7 col-lg-6 auth-main-col text-center p-5">
+        <div class="d-flex flex-column align-content-end">
+            <div class="app-auth-body mx-auto">	
+                <div class="app-auth-branding mb-4"><a class="app-logo" href="/"><img class="logo-icon mr-2" src="assets/images/app-logo.svg" alt="logo"></a></div>
+                <h2 class="auth-heading text-center mb-4">Sign up to Portal</h2>					
 
-                            <div class="mb-3">
-                                <label class="mb-2 text-muted" for="email">E-Mail Address</label>
-                                <input id="email" type="email" class="form-control" name="email" value="" required>
-                                <div class="invalid-feedback">
-                                    Email is invalid
-                                </div>
-                            </div>
+                <div class="auth-form-container text-left mx-auto">
+                    <form [formGroup]="form" class="auth-form auth-signup-form">         
+                        <div class="email mb-3">
+                            <label class="sr-only" for="first_name">Your Name</label>
+                            <input formControlName="first_name" id="first_name" name="first_name" type="text" class="form-control first_name" 
+                            class="form-control"
+                            [ngClass]="{ 'is-invalid': submitted && f['first_name'].errors }"
+                            placeholder="First name" required="required">
 
-                            <div class="mb-3">
-                                <label class="mb-2 text-muted" for="password">Password</label>
-                                <input id="password" type="password" class="form-control" name="password" required>
-                                <div class="invalid-feedback">
-                                    Password is required
-                                </div>
-                            </div>
+                            <div *ngIf="submitted && f['first_name'].errors" class="invalid-feedback text-left">
+                                <div *ngIf="f['first_name'].errors?.['required']">First name is required</div>
+                                <div *ngIf="f['first_name'].errors?.['server_error']">{{f['first_name'].errors?.['server_error']}}</div>
+                              </div>
 
-                            <p class="form-text text-muted mb-3">
-                                By registering you agree with our terms and condition.
-                            </p>
-
-                            <div class="align-items-center d-flex">
-                                <button type="submit" class="btn btn-primary ms-auto">
-                                    Register	
-                                </button>
-                            </div>
-                        </form>
-                    </div>
-                    <div class="card-footer py-3 border-0">
-                        <div class="text-center">
-                            Already have an account? <a href="index.html" class="text-dark">Login</a>
                         </div>
-                    </div>
+                        <div class="email mb-3">
+                            <label class="sr-only" for="last_name">Your Name</label>
+                            <input formControlName="last_name" id="last_name" name="last_name" type="text" class="form-control last_name" 
+                            [ngClass]="{ 'is-invalid': submitted && f['last_name'].errors }"
+                            placeholder="Last name" required="required">
+                            
+                            <div *ngIf="submitted && f['last_name'].errors" class="invalid-feedback text-left">
+                                <div *ngIf="f['last_name'].errors?.['required']">Last name is required</div>
+                                <div *ngIf="f['last_name'].errors?.['server_error']"> sdas {{f['last_name'].errors?.['server_error']}}</div>
+                              </div>
+
+
+                        </div>
+                        <div class="email mb-3">
+                            <label class="sr-only" for="email">Your Email</label>
+                            <input formControlName="email" id="email" name="email" type="email" class="form-control email"
+                            [ngClass]="{ 'is-invalid': submitted && f['email'].errors }"
+                            placeholder="Email" required="required">
+
+
+                            <div *ngIf="submitted && f['email'].errors" class="invalid-feedback text-left">
+                                <div *ngIf="f['email'].errors?.['required']">Email is required</div>
+                                <div *ngIf="f['email'].errors?.['server_error']">{{f['email'].errors?.['server_error']}}</div>
+                              </div>
+
+                        </div>
+                        <div class="password mb-3">
+                            <label class="sr-only" for="password">Password</label>
+                            <input formControlName="password" id="password" name="password" type="password" class="form-control signup-password" 
+                            [ngClass]="{ 'is-invalid': submitted && f['password'].errors }"
+                            placeholder="Create a password" required="required">
+
+
+                            <div *ngIf="submitted && f['password'].errors" class="invalid-feedback text-left">
+                                <div *ngIf="f['password'].errors?.['required']">Password is required</div>
+                                <div *ngIf="f['password'].errors?.['server_error']"> {{f['password'].errors?.['server_error']}}</div>
+                              </div>
+
+
+                        </div>
+                        <div class="password mb-3">
+                            <label class="sr-only" for="confirm_password">Password</label>
+                            <input formControlName="confirm_password" id="confirm_password" name="confirm_password" type="password" class="form-control confirm_password" 
+                            
+                            [ngClass]="{ 'is-invalid': submitted && f['confirm_password'].errors }"
+                            
+                            placeholder="Confirm password" required="required">
+
+
+                            <div *ngIf="submitted && f['confirm_password'].errors" class="invalid-feedback text-left">
+                                <div *ngIf="f['confirm_password'].errors?.['required']">Confirm password is required</div>
+                                <div *ngIf="f['confirm_password'].errors?.['server_error']">{{f['confirm_password'].errors?.['server_error']}}</div>
+                              </div>
+
+                        </div>
+                        <div class="extra mb-3">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="RememberPassword">
+                                <label class="form-check-label" for="RememberPassword">
+                                I agree to Portal's <a href="#" class="app-link">Terms of Service</a> and <a href="#" class="app-link">Privacy Policy</a>.
+                                </label>
+                            </div>
+                        </div><!--//extra-->
+                        
+                        <div class="text-center">
+                            <button type="submit" (click)="register()" class="btn app-btn-primary btn-block theme-btn mx-auto">Sign Up</button>
+                        </div>
+                    </form><!--//auth-form-->
+                    
+                    <div class="auth-option text-center pt-5">Already have an account? <a [routerLink]="'/login'" class="text-link" href="login.html">Log in</a></div>
+                </div><!--//auth-form-container-->	
+                
+                
+                
+            </div>        
+            <footer class="app-auth-footer">
+                <div class="container text-center py-3">
+                     <!--/* This template is free as long as you keep the footer attribution link. If you'd like to use the template without the attribution link, you can buy the commercial license via our website: themes.3rdwavemedia.com Thank you for your support. :) */-->
+                <small class="copyright">Designed with <i class="fas fa-heart" style="color: #fb866a;"></i> by <a class="app-link" href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
+                   
                 </div>
-                <div class="text-center mt-5 text-muted">
-                    Copyright &copy; 2017-2021 &mdash; Your Company 
+            </footer><!--//app-auth-footer-->	
+        </div><!--//flex-column-->   
+    </div><!--//auth-main-col-->
+    <div class="col-12 col-md-5 col-lg-6 h-100 auth-background-col">
+        <div class="auth-background-holder">
+        </div>
+        <div class="auth-background-mask"></div>
+        <div class="auth-background-overlay p-3 p-lg-5">
+            <div class="d-flex flex-column align-content-end h-100">
+                <div class="h-100"></div>
+                <div class="overlay-content p-3 p-lg-4 rounded">
+                    <h5 class="mb-3 overlay-title">Explore Portal Admin Template</h5>
+                    <div>Portal is a free Bootstrap 5 admin dashboard template. You can download and view the template license <a href="https://themes.3rdwavemedia.com/bootstrap-templates/admin-dashboard/portal-free-bootstrap-admin-dashboard-template-for-developers/">here</a>.</div>
                 </div>
             </div>
-        </div>
-    </div>
-</section>
+        </div><!--//auth-background-overlay-->
+    </div><!--//auth-background-col-->
+
+</div><!--//row-->
