--- a/clinic-frontend/src/styles/_style.scss
+++ b/clinic-frontend/src/styles/_style.scss
@@ -17,7 +17,7 @@
     -moz-transition: margin 0.25s ease-out;
     -o-transition: margin 0.25s ease-out;
     transition: margin 0.25s ease-out;
-    box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+    box-shadow: inset -1px 0 0 rgba(59, 57, 57, 0.1);
   }
   
  
@@ -31,7 +31,7 @@
   }
   
   #wrapper #sidebar-wrapper.toggled {
-    margin-left: 40px;
+    margin-left: 0px;
   }
   
   #menu-toggle {
