--- a/clinic-frontend/src/app/modules/shared/toast/toast.component.html
+++ b/clinic-frontend/src/app/modules/shared/toast/toast.component.html
@@ -1,4 +1,4 @@
-<div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+<div class="toast mb-2" role="alert" aria-live="assertive" aria-atomic="true">
     <div class="toast-header">
       123
       <strong class="me-auto">Bootstrap</strong>
@@ -6,6 +6,6 @@
       <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
     </div>
     <div class="toast-body">
-      Hello, world! This is a toast message.
+      {{message}}
     </div>
 </div>
