--- a/clinic-frontend/src/app/modules/shared/layout/header/header.component.html
+++ b/clinic-frontend/src/app/modules/shared/layout/header/header.component.html
@@ -14,15 +14,16 @@
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 text-white">
           <a href="#" class="nav-item nav-link notifications"><i class="fa fa-bell-o"></i><span class="badge">1</span></a>
           <a href="#" class="nav-item nav-link messages"><i class="fa fa-envelope-o"></i><span class="badge">10</span></a>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle text-white fw-bold" href="#" id="navbarDropdown"
+
+            <li class="nav-item dropdown" appDropdown>
+                <a class="nav-link dropdown-toggle text-white fw-bold"  href="#" id="navbarDropdown"
                     role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     <i class="fas fa-user me-2"></i>John Doe
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <li><a class="dropdown-item" href="#">Profile</a></li>
                     <li><a class="dropdown-item" href="#">Settings</a></li>
-                    <li><a class="dropdown-item" (click)="logout()" href="#">Logout</a></li>
+                    <li><a class="dropdown-item" style='cursor:pointer' (click)="logout()">Logout</a></li>
                 </ul>
             </li>
         </ul>
