--- a/clinic-frontend/src/app/modules/shared/toast/toast.component.html
+++ b/clinic-frontend/src/app/modules/shared/toast/toast.component.html
@@ -1,4 +1,4 @@
-<div class="toast mb-2" role="alert" aria-live="assertive" aria-atomic="true">
+<div class="toast mb-2" role="alert" aria-live="assertive" aria-atomic="true" #toastItem>
     <div class="toast-header">
       123
       <strong class="me-auto">Bootstrap</strong>
