--- a/clinic-frontend/src/styles/styles.scss
+++ b/clinic-frontend/src/styles/styles.scss
@@ -21,7 +21,7 @@ $pink:    #EC87C0 !default;
 $red:     #ED5565 !default;
 $orange:  #E9573F !default;
 $yellow:  #FFCE54 !default;
-$green:   #00695d85 !default;
+$green:   #00695c !default;
 $teal:    #4db6ac  !default;
 $cyan:    #4A89DC !default;
 $grey:    #484542 !default;
