--- a/frontend/src/app/admin/doctors/add-doctor/add-doctor.component.html
+++ b/frontend/src/app/admin/doctors/add-doctor/add-doctor.component.html
@@ -23,7 +23,7 @@
 									    <input formControlName="first_name" [ngClass]="{ 'is-invalid': submitted && f.first_name.errors }" type="text" class="form-control" name="first_name">
                                         <div *ngIf="submitted && f.first_name.errors" class="invalid-feedback text-left">
                                             <div *ngIf="f.first_name.errors?.required">First name is required</div>
-                                            <div *ngIf="f.first_name.errors?.server_error">{{f.first_name.errors?.server_error}}</div>
+                                            <div *ngIf="f.first_name.errors?.server_error">{{f.first_name.errors.server_error}}</div>
                                           </div>
                                     </div>
                                     <div class="col-6 mb-3">
@@ -39,7 +39,7 @@
                                         <div *ngIf="submitted && f.email.errors" class="invalid-feedback text-left">
                                             <div *ngIf="f.email.errors?.required">Email is required</div>
                                             <div *ngIf="f.email.errors?.email">Email address is not valid</div>
-                                            <div *ngIf="f.email.errors?.server_error"> {{f.email.errors?.server_error}}</div>
+                                            <div *ngIf="f.email.errors?.server_error"> {{f.email.errors.server_error}}</div>
                                         </div>
 
 									</div>
@@ -50,7 +50,7 @@
                                         <div *ngIf="submitted && f.phone_number.errors" class="invalid-feedback text-left">
                                             <div *ngIf="f.phone_number.errors?.required">Phone number is required.</div>
                                             <div *ngIf="f.phone_number.errors?.invalidNumber">This phone number is not valid.</div>
-                                            <div *ngIf="f.phone_number.errors?.server_error"> {{f.phone_number.errors?.server_error}}</div>
+                                            <div *ngIf="f.phone_number.errors?.server_error"> {{f.phone_number.errors.server_error}}</div>
                                         </div>
                                     </div>
                                     <div class="col-6 mb-3">
@@ -60,7 +60,7 @@
                                             <div *ngIf="f.license.errors?.required">Licence Number is required</div>
                                             <div *ngIf="f.license.errors?.minlength">Licence Number is not valid</div>
                                             <div *ngIf="f.license.errors?.maxlength">Licence Number is not valid</div>
-                                            <div *ngIf="f.license.errors?.server_error"> {{f.license.errors?.server_error}}</div>
+                                            <div *ngIf="f.license.errors?.server_error"> {{f.license.errors.server_error}}</div>
                                         </div>
 									</div>
                                     <div class="col-6 mb-3">
@@ -69,7 +69,7 @@
                                         <div *ngIf="submitted && f.date_of_birth.errors" class="invalid-feedback text-left">
                                             <div *ngIf="f.date_of_birth.errors?.required">Date of birth is required</div>
                                             <div *ngIf="f.date_of_birth.errors?.email">Date of birth is required</div>
-                                            <div *ngIf="f.date_of_birth.errors?.server_error"> {{f.date_of_birth.errors?.server_error}}</div>
+                                            <div *ngIf="f.date_of_birth.errors?.server_error"> {{f.date_of_birth.errors.server_error}}</div>
                                         </div>
 									</div>
                                     <div class="password col-6 mb-3">
