--- a/frontend/src/app/core/dialog/alert/alert.component.html
+++ b/frontend/src/app/core/dialog/alert/alert.component.html
@@ -1,11 +1,16 @@
-<div class="modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+<div class="modal" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content rounded-0">
         <div class="modal-body p-4 px-5">
+
+          
           <div class="main-content text-center">
+              
             <button type="button" (click)='onClose()' class="btn close-btn" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true"><span class="material-icons">close</span></span>
             </button>
+            
+
               <div class="warp-icon mb-4">
                 <button type="button" class="btn" data-bs-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true"><span class="material-icons">info</span></span>
